# Burn-in-subtitle-checker

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: test-media-sources.md
examples/: sample_config.toml
fixtures/e2e/: english_transcript.json  ocr.json  transcript.json
fixtures/realspeech/: spec.json
fixtures/realspeech/bundle/: timeline.json
fixtures/regression/: spec.json
fixtures/regression/bundle/: reference.srt  transcript.json
fixtures/stress/: spec.json
scripts/: build_real_speech_fixture.py  build_regression_fixture.py  build_stress_fixture.py  run_fixture_e2e.sh  run_native_smoke.sh  run_stress_fixture.sh
src/burnin_subtitle_checker/: __init__.py  ai4bharat_ocr_engine.py  asr.py  backend_config.py  cli.py  compare.py  dependencies.py  easyocr_engine.py  exceptions.py  io.py  media.py  models.py  normalize.py  ocr.py  paddleocr_vl_engine.py  progress.py  report.py  srt.py
tests/: test_asr.py  test_asr_extras.py  test_backend_selection.py  test_cli_e2e.py  test_compare.py  test_compare_extras.py  test_dependencies.py  test_easyocr_engine.py  test_normalize.py  test_ocr.py  test_ocr_parallel.py  test_optional_backend_regressions.py  test_progress.py  test_real_speech_pipeline.py  test_regression_pipeline.py  test_report.py  test_report_extras.py  test_srt.py  test_stress_fixture.py
